# QtCustomTitleBar

./: LICENSE  README.md
QtCustomTitleBar/: .gitignore  CMakeLists.txt  QtCustomTitleBar.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h  ui_windowframe.h  windowframe.cpp  windowframe.h  windowframe.ui
QtCustomTitleBar/resources/: resources.qrc
QtCustomTitleBar/resources/style/: appstyles.qss
